--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,7 @@ android:background="@drawable/gradient_bg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/logo"
+        android:visibility="gone"
 
 
 
@@ -157,6 +158,7 @@ android:background="@drawable/gradient_bg"
         android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp"
         android:layout_height="wrap_content"
+        android:visibility="gone"
 
         >
 
